# codeInterpreters

./: .gitignore  README.md  pyproject.toml
code_interpreter/: csv.py  python.py
data/worldcup/2k23/output/: deliveries.csv  matches.csv  points_table.csv
