[tool.poetry]
name = "code-interpreter"
version = "0.1.0"
description = ""
authors = ["Rajat Nigam <rajatnigam89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
black = "^23.11.0"
langchain = "^0.0.340"
openai = "^1.3.5"
langchain-experimental = "^0.0.42"
qrcode = "^7.4.2"
setuptools = "^69.0.2"
pandas = "^2.1.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycode = "code_interpreter.python:run"
csvcode = "code_interpreter.csv:run"